--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
 
         });
         
-        // Refresh page every 300 seconds, providing the modal isn't visible
+        // Refresh page every 300 seconds
         setInterval(function () {
                 window.location.href = '/Home/Index';
         }, 300000);
