--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -80,6 +80,9 @@
                     <li><a href="/Admin/Admin">Administration <span class="glyphicon glyphicon-log-in"></span></a></li>
                     <li><a href="http://goo.gl/forms/u1cbZStRaA" target="_blank">Submit Feedback <span class="glyphicon glyphicon-list-alt"></span></a></li>
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><button class="form-control btn btn-default" id="visitor_button"><span class="glyphicon glyphicon-plus"></span> Visitor</button></li>
+                </ul>
             </div>
         </div>
     </div>
