added logic for a core instance to be readded for a returning visitor, ui not yet wired up for visitor adding.

--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -363,6 +363,8 @@
                                         </div>
                                     </div>
                                     <br />
+                                    <!-- Hidden input field for our departure datetime. -->
+                                    <input type="hidden" id="intendedDepartTime" name="intendedDepartTime" value="0" />
                                     <button id="save_new_visitor" type="submit" class="btn btn-info btn-block"><span class="glyphicon glyphicon-floppy-disk"></span> Save</button>
                                 </div>
                             </form>
