--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -17,6 +17,7 @@
     <script src="../../Scripts/swipe_to_change_status.js"></script>
     <script src="../../Scripts/init_modal.js"></script>
     <script src="../../Scripts/visitor_modal.js"></script>
+    <script src="../../Scripts/add_group.js"></script>
     <script src="../../Scripts/mobile-range-slider.js"></script>
     <script src="../../Scripts/datetime_selection.js"></script>
     <script src="../../Scripts/link_modifier.js"></script>
@@ -83,6 +84,17 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><button class="form-control btn btn-primary" id="visitor_button"><span class="glyphicon glyphicon-plus"></span> Visitor</button></li>
+                    <li>&nbsp;</li>
+                    <li>
+                        <div class="btn-group" role="group" aria-label="...">
+                            <div class="btn-group" role="group">
+                                <button class="form-control btn btn-primary" id="add_group_button"><span class="glyphicon glyphicon-plus"></span> Group</button>
+                            </div>
+                            <div class="btn-group" role="group">
+                                <button class="form-control btn btn-primary" id="remove_group_button"><span class="glyphicon glyphicon-minus"></span> Group</button>
+                            </div>
+                        </div> 
+                    </li>
                 </ul>
             </div>
         </div>
@@ -331,6 +343,38 @@
                 </div>
             </div>
             <!-- /modal -->
+        </div>
+    </div>
+    <!-- /row -->
+
+    <div class="row">
+        <div class="container">
+            <!-- Add group modal -->
+            <div class="modal fade" id="add_group_modal" role="dialog" data-backdrop="static">
+                <div class="modal-dialog">
+                    <!-- Modal content -->
+                    <div class="modal-content">
+                        <div id="main-modal-header" class="modal-header" style="padding:35px 50px;">
+                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <h4 class="global_modal_header">Add Group</h4>
+                        </div>
+                        <div class="modal-body" style="padding:40px 50px;">
+                            <form id="add_group_form" action="/Home/SubmitStatusOrLocationUpdateForGroup" method="post" role="form">
+                                <p><b>Select members:</b></p>
+                                <!-- Selectable list of possible members -->
+                                <div class="scrolling_div">
+
+                                </div>
+                            </form>
+                        </div>
+                        <!-- Modal Footer -->
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- /add group modal -->
         </div>
     </div>
     <!-- /row -->
