optimised visitor add feature to include visitors last listed company name beside returning visitors to help distinguish visitors with duplicate names

--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     <script src="../../Scripts/swipe_to_change_status.js"></script>
     <script src="../../Scripts/init_modal.js"></script>
     <script src="../../Scripts/visitor_modal.js"></script>
-    <script src="../../Scripts/add_group.js"></script>
+    <!--<script src="../../Scripts/add_group.js"></script>-->
     <script src="../../Scripts/mobile-range-slider.js"></script>
     <script src="../../Scripts/datetime_selection.js"></script>
     <script src="../../Scripts/link_modifier.js"></script>
@@ -84,6 +84,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><button class="form-control btn btn-primary" id="visitor_button"><span class="glyphicon glyphicon-plus"></span> Visitor</button></li>
+                    <!--
                     <li>&nbsp;</li>
                     <li>
                         <div class="btn-group" role="group" aria-label="...">
@@ -95,6 +96,7 @@
                             </div>
                         </div> 
                     </li>
+                    -->
                 </ul>
             </div>
         </div>
