--- a/ABLCloudStaff/ABLCloudStaff/Content/Site.css
+++ b/ABLCloudStaff/ABLCloudStaff/Content/Site.css
@@ -118,9 +118,16 @@ input[type="checkbox"].input-validation-error {
 }
 
 #visitor_button,
-#add_group_button,
-#remove_group_button {
+#see_groups_button {
     margin-top: 7px;
+}
+
+.btn_group_is_in {
+    background-color: #94D6F2;
+}
+
+.btn_group_is_out {
+    background-color: #F2C8B6;
 }
 
 /* Staff modules */
@@ -179,12 +186,6 @@ input[type="checkbox"].input-validation-error {
     z-index: 0;
 }
 
-/* Add group modal */
-.scrolling_div {
-    height: 120px;
-    width: inherit;
-    overflow: auto;
-}
 
 /********************************/
 
