--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
     <script src="../../Scripts/swipe_to_change_status.js"></script>
     <script src="../../Scripts/init_modal.js"></script>
     <script src="../../Scripts/visitor_modal.js"></script>
-    <!--<script src="../../Scripts/add_group.js"></script>-->
+    <script src="../../Scripts/Groups/see_groups.js"></script>
     <script src="../../Scripts/mobile-range-slider.js"></script>
     <script src="../../Scripts/datetime_selection.js"></script>
     <script src="../../Scripts/link_modifier.js"></script>
@@ -84,19 +84,8 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><button class="form-control btn btn-primary" id="visitor_button"><span class="glyphicon glyphicon-plus"></span> Visitor</button></li>
-                    <!--
                     <li>&nbsp;</li>
-                    <li>
-                        <div class="btn-group" role="group" aria-label="...">
-                            <div class="btn-group" role="group">
-                                <button class="form-control btn btn-primary" id="add_group_button"><span class="glyphicon glyphicon-plus"></span> Group</button>
-                            </div>
-                            <div class="btn-group" role="group">
-                                <button class="form-control btn btn-primary" id="remove_group_button"><span class="glyphicon glyphicon-minus"></span> Group</button>
-                            </div>
-                        </div> 
-                    </li>
-                    -->
+                    <li><button class="form-control btn btn-primary" id="see_groups_button"><span class="glyphicon glyphicon-plus"></span> Group</button></li>
                 </ul>
             </div>
         </div>
@@ -351,23 +340,20 @@
 
     <div class="row">
         <div class="container">
-            <!-- Add group modal -->
-            <div class="modal fade" id="add_group_modal" role="dialog" data-backdrop="static">
+            <!-- See groups modal -->
+            <div class="modal fade" id="see_groups_modal" role="dialog" data-backdrop="static">
                 <div class="modal-dialog">
                     <!-- Modal content -->
                     <div class="modal-content">
                         <div id="main-modal-header" class="modal-header" style="padding:35px 50px;">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                            <h4 class="global_modal_header">Add Group</h4>
+                            <h4 class="global_modal_header">Groups</h4>
                         </div>
                         <div class="modal-body" style="padding:40px 50px;">
-                            <form id="add_group_form" action="/Home/SubmitStatusOrLocationUpdateForGroup" method="post" role="form">
-                                <p><b>Select members:</b></p>
-                                <!-- Selectable list of possible members -->
-                                <div class="scrolling_div">
-
-                                </div>
-                            </form>
+                            <!-- List groups here (active or not) -->
+                            <div class="list-group" id="current_group_list">
+                                <!--<button type="button" class="list-group-item">Group 1</button>-->
+                            </div>
                         </div>
                         <!-- Modal Footer -->
                         <div class="modal-footer">
@@ -376,7 +362,7 @@
                     </div>
                 </div>
             </div>
-            <!-- /add group modal -->
+            <!-- /see groups modal -->
         </div>
     </div>
     <!-- /row -->
