biz logic to pull up users for an indicated group

--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -85,7 +85,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><button class="form-control btn btn-primary" id="visitor_button"><span class="glyphicon glyphicon-plus"></span> Visitor</button></li>
                     <li>&nbsp;</li>
-                    <li><button class="form-control btn btn-primary" id="see_groups_button"><span class="glyphicon glyphicon-plus"></span> Group</button></li>
+                    <li><button class="form-control btn btn-primary" id="see_groups_button">Groups</button></li>
                 </ul>
             </div>
         </div>
@@ -347,6 +347,7 @@
                     <div class="modal-content">
                         <div id="main-modal-header" class="modal-header" style="padding:35px 50px;">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <button type="button" class="pull-left btn btn-success" data-dismiss="modal"><span class="glyphicon glyphicon-plus"></span> New</button>
                             <h4 class="global_modal_header">Groups</h4>
                         </div>
                         <div class="modal-body" style="padding:40px 50px;">
